--- a/oct-prototype/history.html
+++ b/oct-prototype/history.html
@@ -91,7 +91,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u9" class="ax_表格单元">
-          <img id="u9_img" class="img " src="images/history/regen/u9.png"/>
+          <img id="u9_img" class="img " src="images/history/u9.png"/>
           <!-- Unnamed () -->
           <div id="u10" class="text">
             <p><span>保养</span><span>日期</span></p>
@@ -100,7 +100,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u11" class="ax_表格单元">
-          <img id="u11_img" class="img " src="images/history/regen/u9.png"/>
+          <img id="u11_img" class="img " src="images/history/u9.png"/>
           <!-- Unnamed () -->
           <div id="u12" class="text">
             <p><span>保养人</span></p>
@@ -109,7 +109,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u13" class="ax_表格单元">
-          <img id="u13_img" class="img " src="images/history/regen/u13.png"/>
+          <img id="u13_img" class="img " src="images/history/u13.png"/>
           <!-- Unnamed () -->
           <div id="u14" class="text">
             <p><span>详情</span></p>
@@ -118,16 +118,16 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u15" class="ax_表格单元">
-          <img id="u15_img" class="img " src="images/history/regen/u15.png"/>
+          <img id="u15_img" class="img " src="images/history/u15.png"/>
           <!-- Unnamed () -->
           <div id="u16" class="text">
-            <p><span>2016年1月30日</span></p>
+            <p><span>2016年1</span><span>0</span><span>月</span><span>1</span><span>0日</span></p>
           </div>
         </div>
 
         <!-- Unnamed (表格单元) -->
         <div id="u17" class="ax_表格单元">
-          <img id="u17_img" class="img " src="images/history/regen/u15.png"/>
+          <img id="u17_img" class="img " src="images/history/u15.png"/>
           <!-- Unnamed () -->
           <div id="u18" class="text">
             <p><span>张三</span></p>
@@ -136,7 +136,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u19" class="ax_表格单元">
-          <img id="u19_img" class="img " src="images/history/regen/u19.png"/>
+          <img id="u19_img" class="img " src="images/history/u19.png"/>
           <!-- Unnamed () -->
           <div id="u20" class="text">
             <p><span></span></p>
@@ -145,16 +145,16 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u21" class="ax_表格单元">
-          <img id="u21_img" class="img " src="images/history/regen/u21.png"/>
+          <img id="u21_img" class="img " src="images/history/u21.png"/>
           <!-- Unnamed () -->
           <div id="u22" class="text">
-            <p><span>201</span><span>7</span><span>年</span><span>1</span><span>月28日</span></p>
+            <p><span>201</span><span>7</span><span>年</span><span>1</span><span>0</span><span>月</span><span>7</span><span>日</span></p>
           </div>
         </div>
 
         <!-- Unnamed (表格单元) -->
         <div id="u23" class="ax_表格单元">
-          <img id="u23_img" class="img " src="images/history/regen/u21.png"/>
+          <img id="u23_img" class="img " src="images/history/u21.png"/>
           <!-- Unnamed () -->
           <div id="u24" class="text">
             <p><span>张三</span></p>
@@ -163,7 +163,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u25" class="ax_表格单元">
-          <img id="u25_img" class="img " src="images/history/regen/u25.png"/>
+          <img id="u25_img" class="img " src="images/history/u25.png"/>
           <!-- Unnamed () -->
           <div id="u26" class="text">
             <p><span></span></p>
