--- a/oct-prototype/input.html
+++ b/oct-prototype/input.html
@@ -61,7 +61,7 @@
       <!-- Unnamed (下拉列表框) -->
       <div id="u2" class="ax_下拉列表框">
         <select id="u2_input">
-          <option value="6000V电机">6000V电机</option>
+          <option value="6000V及以上电机">6000V及以上电机</option>
           <option value="6000V以下不带振动电机">6000V以下不带振动电机</option>
           <option value="6000V以下带振动电机">6000V以下带振动电机</option>
           <option value="CST">CST</option>
@@ -267,7 +267,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u29" class="ax_表格单元">
-          <img id="u29_img" class="img " src="images/input/regen/u29.png"/>
+          <img id="u29_img" class="img " src="images/input/u29.png"/>
           <!-- Unnamed () -->
           <div id="u30" class="text">
             <p><span>保养内容</span></p>
@@ -276,7 +276,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u31" class="ax_表格单元">
-          <img id="u31_img" class="img " src="images/input/regen/u31.png"/>
+          <img id="u31_img" class="img " src="images/input/u31.png"/>
           <!-- Unnamed () -->
           <div id="u32" class="text">
             <p><span>完成情况</span></p>
@@ -285,7 +285,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u33" class="ax_表格单元">
-          <img id="u33_img" class="img " src="images/input/regen/u33.png"/>
+          <img id="u33_img" class="img " src="images/input/u33.png"/>
           <!-- Unnamed () -->
           <div id="u34" class="text">
             <p><span>备注</span></p>
@@ -294,7 +294,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u35" class="ax_表格单元">
-          <img id="u35_img" class="img " src="images/input/regen/u35.png"/>
+          <img id="u35_img" class="img " src="images/input/u35.png"/>
           <!-- Unnamed () -->
           <div id="u36" class="text">
             <p><span>维修耗材名称</span></p>
@@ -303,7 +303,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u37" class="ax_表格单元">
-          <img id="u37_img" class="img " src="images/input/regen/u37.png"/>
+          <img id="u37_img" class="img " src="images/input/u37.png"/>
           <!-- Unnamed () -->
           <div id="u38" class="text">
             <p><span>耗材用量</span></p>
@@ -312,7 +312,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u39" class="ax_表格单元">
-          <img id="u39_img" class="img " src="images/input/regen/u39.png"/>
+          <img id="u39_img" class="img " src="images/input/u39.png"/>
           <!-- Unnamed () -->
           <div id="u40" class="text">
             <p><span>检查6000V接线盒内瓷瓶、端子；</span></p>
@@ -321,7 +321,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u41" class="ax_表格单元">
-          <img id="u41_img" class="img " src="images/input/regen/u41.png"/>
+          <img id="u41_img" class="img " src="images/input/u41.png"/>
           <!-- Unnamed () -->
           <div id="u42" class="text">
             <p><span></span></p>
@@ -330,7 +330,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u43" class="ax_表格单元">
-          <img id="u43_img" class="img " src="images/input/regen/u43.png"/>
+          <img id="u43_img" class="img " src="images/input/u43.png"/>
           <!-- Unnamed () -->
           <div id="u44" class="text">
             <p><span></span></p>
@@ -339,7 +339,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u45" class="ax_表格单元">
-          <img id="u45_img" class="img " src="images/input/regen/u45.png"/>
+          <img id="u45_img" class="img " src="images/input/u45.png"/>
           <!-- Unnamed () -->
           <div id="u46" class="text">
             <p><span></span></p>
@@ -348,7 +348,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u47" class="ax_表格单元">
-          <img id="u47_img" class="img " src="images/input/regen/u47.png"/>
+          <img id="u47_img" class="img " src="images/input/u47.png"/>
           <!-- Unnamed () -->
           <div id="u48" class="text">
             <p><span></span></p>
@@ -357,7 +357,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u49" class="ax_表格单元">
-          <img id="u49_img" class="img " src="images/input/regen/u29.png"/>
+          <img id="u49_img" class="img " src="images/input/u29.png"/>
           <!-- Unnamed () -->
           <div id="u50" class="text">
             <p><span>接线盒内卫生清洁；</span></p>
@@ -366,7 +366,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u51" class="ax_表格单元">
-          <img id="u51_img" class="img " src="images/input/regen/u31.png"/>
+          <img id="u51_img" class="img " src="images/input/u31.png"/>
           <!-- Unnamed () -->
           <div id="u52" class="text">
             <p><span></span></p>
@@ -375,7 +375,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u53" class="ax_表格单元">
-          <img id="u53_img" class="img " src="images/input/regen/u33.png"/>
+          <img id="u53_img" class="img " src="images/input/u33.png"/>
           <!-- Unnamed () -->
           <div id="u54" class="text">
             <p><span></span></p>
@@ -384,7 +384,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u55" class="ax_表格单元">
-          <img id="u55_img" class="img " src="images/input/regen/u35.png"/>
+          <img id="u55_img" class="img " src="images/input/u35.png"/>
           <!-- Unnamed () -->
           <div id="u56" class="text">
             <p><span></span></p>
@@ -393,7 +393,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u57" class="ax_表格单元">
-          <img id="u57_img" class="img " src="images/input/regen/u37.png"/>
+          <img id="u57_img" class="img " src="images/input/u37.png"/>
           <!-- Unnamed () -->
           <div id="u58" class="text">
             <p><span></span></p>
@@ -402,7 +402,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u59" class="ax_表格单元">
-          <img id="u59_img" class="img " src="images/input/regen/u59.png"/>
+          <img id="u59_img" class="img " src="images/input/u59.png"/>
           <!-- Unnamed () -->
           <div id="u60" class="text">
             <p><span>检查电缆引线、穿线管、接地线；</span></p>
@@ -411,7 +411,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u61" class="ax_表格单元">
-          <img id="u61_img" class="img " src="images/input/regen/u61.png"/>
+          <img id="u61_img" class="img " src="images/input/u61.png"/>
           <!-- Unnamed () -->
           <div id="u62" class="text">
             <p><span></span></p>
@@ -420,7 +420,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u63" class="ax_表格单元">
-          <img id="u63_img" class="img " src="images/input/regen/u63.png"/>
+          <img id="u63_img" class="img " src="images/input/u63.png"/>
           <!-- Unnamed () -->
           <div id="u64" class="text">
             <p><span></span></p>
@@ -429,7 +429,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u65" class="ax_表格单元">
-          <img id="u65_img" class="img " src="images/input/regen/u65.png"/>
+          <img id="u65_img" class="img " src="images/input/u65.png"/>
           <!-- Unnamed () -->
           <div id="u66" class="text">
             <p><span></span></p>
@@ -438,7 +438,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u67" class="ax_表格单元">
-          <img id="u67_img" class="img " src="images/input/regen/u67.png"/>
+          <img id="u67_img" class="img " src="images/input/u67.png"/>
           <!-- Unnamed () -->
           <div id="u68" class="text">
             <p><span></span></p>
@@ -447,7 +447,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u69" class="ax_表格单元">
-          <img id="u69_img" class="img " src="images/input/regen/u69.png"/>
+          <img id="u69_img" class="img " src="images/input/u69.png"/>
           <!-- Unnamed () -->
           <div id="u70" class="text">
             <p><span>检查进线口密封情况；</span></p>
@@ -456,7 +456,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u71" class="ax_表格单元">
-          <img id="u71_img" class="img " src="images/input/regen/u71.png"/>
+          <img id="u71_img" class="img " src="images/input/u71.png"/>
           <!-- Unnamed () -->
           <div id="u72" class="text">
             <p><span></span></p>
@@ -465,7 +465,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u73" class="ax_表格单元">
-          <img id="u73_img" class="img " src="images/input/regen/u73.png"/>
+          <img id="u73_img" class="img " src="images/input/u73.png"/>
           <!-- Unnamed () -->
           <div id="u74" class="text">
             <p><span></span></p>
@@ -474,7 +474,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u75" class="ax_表格单元">
-          <img id="u75_img" class="img " src="images/input/regen/u75.png"/>
+          <img id="u75_img" class="img " src="images/input/u75.png"/>
           <!-- Unnamed () -->
           <div id="u76" class="text">
             <p><span></span></p>
@@ -483,7 +483,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u77" class="ax_表格单元">
-          <img id="u77_img" class="img " src="images/input/regen/u77.png"/>
+          <img id="u77_img" class="img " src="images/input/u77.png"/>
           <!-- Unnamed () -->
           <div id="u78" class="text">
             <p><span></span></p>
@@ -492,7 +492,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u79" class="ax_表格单元">
-          <img id="u79_img" class="img " src="images/input/regen/u79.png"/>
+          <img id="u79_img" class="img " src="images/input/u79.png"/>
           <!-- Unnamed () -->
           <div id="u80" class="text">
             <p><span>检查前后轴承温度传感器的接线盒；</span></p>
@@ -501,7 +501,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u81" class="ax_表格单元">
-          <img id="u81_img" class="img " src="images/input/regen/u81.png"/>
+          <img id="u81_img" class="img " src="images/input/u81.png"/>
           <!-- Unnamed () -->
           <div id="u82" class="text">
             <p><span></span></p>
@@ -510,7 +510,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u83" class="ax_表格单元">
-          <img id="u83_img" class="img " src="images/input/regen/u83.png"/>
+          <img id="u83_img" class="img " src="images/input/u83.png"/>
           <!-- Unnamed () -->
           <div id="u84" class="text">
             <p><span></span></p>
@@ -519,7 +519,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u85" class="ax_表格单元">
-          <img id="u85_img" class="img " src="images/input/regen/u85.png"/>
+          <img id="u85_img" class="img " src="images/input/u85.png"/>
           <!-- Unnamed () -->
           <div id="u86" class="text">
             <p><span></span></p>
@@ -528,7 +528,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u87" class="ax_表格单元">
-          <img id="u87_img" class="img " src="images/input/regen/u87.png"/>
+          <img id="u87_img" class="img " src="images/input/u87.png"/>
           <!-- Unnamed () -->
           <div id="u88" class="text">
             <p><span></span></p>
@@ -537,7 +537,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u89" class="ax_表格单元">
-          <img id="u89_img" class="img " src="images/input/regen/u89.png"/>
+          <img id="u89_img" class="img " src="images/input/u89.png"/>
           <!-- Unnamed () -->
           <div id="u90" class="text">
             <p><span>检查定子绕组温度传感器的接线盒。</span></p>
@@ -546,7 +546,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u91" class="ax_表格单元">
-          <img id="u91_img" class="img " src="images/input/regen/u91.png"/>
+          <img id="u91_img" class="img " src="images/input/u91.png"/>
           <!-- Unnamed () -->
           <div id="u92" class="text">
             <p><span></span></p>
@@ -555,7 +555,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u93" class="ax_表格单元">
-          <img id="u93_img" class="img " src="images/input/regen/u93.png"/>
+          <img id="u93_img" class="img " src="images/input/u93.png"/>
           <!-- Unnamed () -->
           <div id="u94" class="text">
             <p><span></span></p>
@@ -564,7 +564,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u95" class="ax_表格单元">
-          <img id="u95_img" class="img " src="images/input/regen/u95.png"/>
+          <img id="u95_img" class="img " src="images/input/u95.png"/>
           <!-- Unnamed () -->
           <div id="u96" class="text">
             <p><span></span></p>
@@ -573,7 +573,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u97" class="ax_表格单元">
-          <img id="u97_img" class="img " src="images/input/regen/u97.png"/>
+          <img id="u97_img" class="img " src="images/input/u97.png"/>
           <!-- Unnamed () -->
           <div id="u98" class="text">
             <p><span></span></p>
@@ -582,7 +582,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u99" class="ax_表格单元">
-          <img id="u99_img" class="img " src="images/input/regen/u59.png"/>
+          <img id="u99_img" class="img " src="images/input/u59.png"/>
           <!-- Unnamed () -->
           <div id="u100" class="text">
             <p><span>检查防潮加热器的接线盒。</span></p>
@@ -591,7 +591,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u101" class="ax_表格单元">
-          <img id="u101_img" class="img " src="images/input/regen/u61.png"/>
+          <img id="u101_img" class="img " src="images/input/u61.png"/>
           <!-- Unnamed () -->
           <div id="u102" class="text">
             <p><span></span></p>
@@ -600,7 +600,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u103" class="ax_表格单元">
-          <img id="u103_img" class="img " src="images/input/regen/u63.png"/>
+          <img id="u103_img" class="img " src="images/input/u63.png"/>
           <!-- Unnamed () -->
           <div id="u104" class="text">
             <p><span></span></p>
@@ -609,7 +609,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u105" class="ax_表格单元">
-          <img id="u105_img" class="img " src="images/input/regen/u65.png"/>
+          <img id="u105_img" class="img " src="images/input/u65.png"/>
           <!-- Unnamed () -->
           <div id="u106" class="text">
             <p><span></span></p>
@@ -618,7 +618,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u107" class="ax_表格单元">
-          <img id="u107_img" class="img " src="images/input/regen/u67.png"/>
+          <img id="u107_img" class="img " src="images/input/u67.png"/>
           <!-- Unnamed () -->
           <div id="u108" class="text">
             <p><span></span></p>
@@ -627,7 +627,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u109" class="ax_表格单元">
-          <img id="u109_img" class="img " src="images/input/regen/u109.png"/>
+          <img id="u109_img" class="img " src="images/input/u109.png"/>
           <!-- Unnamed () -->
           <div id="u110" class="text">
             <p><span></span></p>
@@ -636,7 +636,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u111" class="ax_表格单元">
-          <img id="u111_img" class="img " src="images/input/regen/u111.png"/>
+          <img id="u111_img" class="img " src="images/input/u111.png"/>
           <!-- Unnamed () -->
           <div id="u112" class="text">
             <p><span></span></p>
@@ -645,7 +645,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u113" class="ax_表格单元">
-          <img id="u113_img" class="img " src="images/input/regen/u113.png"/>
+          <img id="u113_img" class="img " src="images/input/u113.png"/>
           <!-- Unnamed () -->
           <div id="u114" class="text">
             <p><span></span></p>
@@ -654,7 +654,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u115" class="ax_表格单元">
-          <img id="u115_img" class="img " src="images/input/regen/u115.png"/>
+          <img id="u115_img" class="img " src="images/input/u115.png"/>
           <!-- Unnamed () -->
           <div id="u116" class="text">
             <p><span></span></p>
@@ -663,7 +663,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u117" class="ax_表格单元">
-          <img id="u117_img" class="img " src="images/input/regen/u117.png"/>
+          <img id="u117_img" class="img " src="images/input/u117.png"/>
           <!-- Unnamed () -->
           <div id="u118" class="text">
             <p><span></span></p>
@@ -672,7 +672,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u119" class="ax_表格单元">
-          <img id="u119_img" class="img " src="images/input/regen/u59.png"/>
+          <img id="u119_img" class="img " src="images/input/u59.png"/>
           <!-- Unnamed () -->
           <div id="u120" class="text">
             <p><span></span></p>
@@ -681,7 +681,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u121" class="ax_表格单元">
-          <img id="u121_img" class="img " src="images/input/regen/u61.png"/>
+          <img id="u121_img" class="img " src="images/input/u61.png"/>
           <!-- Unnamed () -->
           <div id="u122" class="text">
             <p><span></span></p>
@@ -690,7 +690,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u123" class="ax_表格单元">
-          <img id="u123_img" class="img " src="images/input/regen/u63.png"/>
+          <img id="u123_img" class="img " src="images/input/u63.png"/>
           <!-- Unnamed () -->
           <div id="u124" class="text">
             <p><span></span></p>
@@ -699,7 +699,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u125" class="ax_表格单元">
-          <img id="u125_img" class="img " src="images/input/regen/u65.png"/>
+          <img id="u125_img" class="img " src="images/input/u65.png"/>
           <!-- Unnamed () -->
           <div id="u126" class="text">
             <p><span></span></p>
@@ -708,7 +708,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u127" class="ax_表格单元">
-          <img id="u127_img" class="img " src="images/input/regen/u67.png"/>
+          <img id="u127_img" class="img " src="images/input/u67.png"/>
           <!-- Unnamed () -->
           <div id="u128" class="text">
             <p><span></span></p>
@@ -717,7 +717,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u129" class="ax_表格单元">
-          <img id="u129_img" class="img " src="images/input/regen/u129.png"/>
+          <img id="u129_img" class="img " src="images/input/u129.png"/>
           <!-- Unnamed () -->
           <div id="u130" class="text">
             <p><span></span></p>
@@ -726,7 +726,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u131" class="ax_表格单元">
-          <img id="u131_img" class="img " src="images/input/regen/u131.png"/>
+          <img id="u131_img" class="img " src="images/input/u131.png"/>
           <!-- Unnamed () -->
           <div id="u132" class="text">
             <p><span></span></p>
@@ -735,7 +735,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u133" class="ax_表格单元">
-          <img id="u133_img" class="img " src="images/input/regen/u133.png"/>
+          <img id="u133_img" class="img " src="images/input/u133.png"/>
           <!-- Unnamed () -->
           <div id="u134" class="text">
             <p><span></span></p>
@@ -744,7 +744,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u135" class="ax_表格单元">
-          <img id="u135_img" class="img " src="images/input/regen/u135.png"/>
+          <img id="u135_img" class="img " src="images/input/u135.png"/>
           <!-- Unnamed () -->
           <div id="u136" class="text">
             <p><span></span></p>
@@ -753,7 +753,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u137" class="ax_表格单元">
-          <img id="u137_img" class="img " src="images/input/regen/u137.png"/>
+          <img id="u137_img" class="img " src="images/input/u137.png"/>
           <!-- Unnamed () -->
           <div id="u138" class="text">
             <p><span></span></p>
