--- a/oct-prototype/warning.html
+++ b/oct-prototype/warning.html
@@ -71,8 +71,8 @@
       <div id="u4" class="ax_下拉列表框">
         <select id="u4_input">
           <option value="2016年">2016年</option>
-          <option value="2017年">2017年</option>
-          <option selected value="2018年">2018年</option>
+          <option selected value="2017年">2017年</option>
+          <option value="2018年">2018年</option>
           <option value="2019年">2019年</option>
           <option value="2020年">2020年</option>
         </select>
@@ -90,7 +90,7 @@
           <option value="7月">7月</option>
           <option value="8月">8月</option>
           <option value="9月">9月</option>
-          <option value="10月">10月</option>
+          <option selected value="10月">10月</option>
           <option value="11月">11月</option>
           <option value="12月">12月</option>
         </select>
@@ -105,7 +105,7 @@
           <option value="4日">4日</option>
           <option value="5日">5日</option>
           <option value="6日">6日</option>
-          <option value="7日">7日</option>
+          <option selected value="7日">7日</option>
           <option value="8日">8日</option>
           <option value="9日">9日</option>
           <option value="10日">10日</option>
@@ -123,7 +123,7 @@
           <option value="22日">22日</option>
           <option value="23日">23日</option>
           <option value="24日">24日</option>
-          <option selected value="25日">25日</option>
+          <option value="25日">25日</option>
           <option value="26日">26日</option>
           <option value="27日">27日</option>
           <option value="28日">28日</option>
@@ -152,7 +152,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u11" class="ax_表格单元">
-          <img id="u11_img" class="img " src="images/warning/regen/u9.png"/>
+          <img id="u11_img" class="img " src="images/warning/regen/u11.png"/>
           <!-- Unnamed () -->
           <div id="u12" class="text">
             <p><span>设备号</span></p>
@@ -161,7 +161,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u13" class="ax_表格单元">
-          <img id="u13_img" class="img " src="images/warning/regen/u9.png"/>
+          <img id="u13_img" class="img " src="images/warning/regen/u13.png"/>
           <!-- Unnamed () -->
           <div id="u14" class="text">
             <p><span>检修类别</span></p>
@@ -170,7 +170,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u15" class="ax_表格单元">
-          <img id="u15_img" class="img " src="images/warning/regen/u9.png"/>
+          <img id="u15_img" class="img " src="images/warning/regen/u13.png"/>
           <!-- Unnamed () -->
           <div id="u16" class="text">
             <p><span>上次保养日期</span></p>
@@ -188,25 +188,25 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u19" class="ax_表格单元">
-          <img id="u19_img" class="img " src="images/warning/regen/u9.png"/>
+          <img id="u19_img" class="img " src="images/warning/regen/u19.png"/>
           <!-- Unnamed () -->
           <div id="u20" class="text">
-            <p><span>6000V电机</span></p>
+            <p><span>6000V</span><span>及以上</span><span></span><span>电机</span></p>
           </div>
         </div>
 
         <!-- Unnamed (表格单元) -->
         <div id="u21" class="ax_表格单元">
-          <img id="u21_img" class="img " src="images/warning/regen/u9.png"/>
+          <img id="u21_img" class="img " src="images/warning/regen/u21.png"/>
           <!-- Unnamed () -->
           <div id="u22" class="text">
-            <p><span>6000Vdj001</span></p>
+            <p><span>123</span></p>
           </div>
         </div>
 
         <!-- Unnamed (表格单元) -->
         <div id="u23" class="ax_表格单元">
-          <img id="u23_img" class="img " src="images/warning/regen/u9.png"/>
+          <img id="u23_img" class="img " src="images/warning/regen/u23.png"/>
           <!-- Unnamed () -->
           <div id="u24" class="text">
             <p><span>年检</span></p>
@@ -215,16 +215,16 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u25" class="ax_表格单元">
-          <img id="u25_img" class="img " src="images/warning/regen/u9.png"/>
+          <img id="u25_img" class="img " src="images/warning/regen/u23.png"/>
           <!-- Unnamed () -->
           <div id="u26" class="text">
-            <p><span>2017年1月28日</span></p>
+            <p><span>201</span><span>6</span><span>年1</span><span>0</span><span>月</span><span>10</span><span>日</span></p>
           </div>
         </div>
 
         <!-- Unnamed (表格单元) -->
         <div id="u27" class="ax_表格单元">
-          <img id="u27_img" class="img " src="images/warning/regen/u17.png"/>
+          <img id="u27_img" class="img " src="images/warning/regen/u27.png"/>
           <!-- Unnamed () -->
           <div id="u28" class="text">
             <p><span>3天</span></p>
@@ -242,7 +242,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u31" class="ax_表格单元">
-          <img id="u31_img" class="img " src="images/warning/regen/u29.png"/>
+          <img id="u31_img" class="img " src="images/warning/regen/u31.png"/>
           <!-- Unnamed () -->
           <div id="u32" class="text">
             <p><span></span></p>
@@ -251,7 +251,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u33" class="ax_表格单元">
-          <img id="u33_img" class="img " src="images/warning/regen/u29.png"/>
+          <img id="u33_img" class="img " src="images/warning/regen/u33.png"/>
           <!-- Unnamed () -->
           <div id="u34" class="text">
             <p><span></span></p>
@@ -260,7 +260,7 @@
 
         <!-- Unnamed (表格单元) -->
         <div id="u35" class="ax_表格单元">
-          <img id="u35_img" class="img " src="images/warning/regen/u29.png"/>
+          <img id="u35_img" class="img " src="images/warning/regen/u33.png"/>
           <!-- Unnamed () -->
           <div id="u36" class="text">
             <p><span></span></p>
