--- a/oct-prototype/home.html
+++ b/oct-prototype/home.html
@@ -60,7 +60,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u2" class="ax_形状">
-        <img id="u2_img" class="img " src="images/home/regen/u2.png"/>
+        <img id="u2_img" class="img " src="images/home/u2.png"/>
         <!-- Unnamed () -->
         <div id="u3" class="text">
           <p><span>设备巡检录入</span></p>
@@ -69,7 +69,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u4" class="ax_形状">
-        <img id="u4_img" class="img " src="images/home/regen/u4.png"/>
+        <img id="u4_img" class="img " src="images/home/u4.png"/>
         <!-- Unnamed () -->
         <div id="u5" class="text">
           <p><span>设备保养情况查询</span></p>
@@ -78,7 +78,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u6" class="ax_形状">
-        <img id="u6_img" class="img " src="images/home/regen/u6.png"/>
+        <img id="u6_img" class="img " src="images/home/u6.png"/>
         <!-- Unnamed () -->
         <div id="u7" class="text">
           <p><span>设备到期预警</span></p>
